--- a/public/index.html
+++ b/public/index.html
@@ -2,143 +2,378 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Silent Coach</title>
 
-  <!-- PWA -->
-  <link rel="manifest" href="/manifest.json" />
-  <meta name="theme-color" content="#0b1020" />
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#0b1020">
 
   <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI";
-      background: radial-gradient(circle at top left, #1e293b, #020617);
-      color: #e5e7eb;
-      text-align: center;
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,"Apple SD Gothic Neo","Malgun Gothic",sans-serif;
+      background: radial-gradient(circle at top, #182a5a 0%, #0b1020 55%, #070a12 100%);
+      color:#e5e7eb;
     }
-
-    h1 { margin-top: 24px; }
-
-    button {
-      padding: 14px 22px;
-      margin: 8px;
-      font-size: 16px;
-      border-radius: 12px;
-      border: none;
-      cursor: pointer;
+    .wrap{max-width:960px;margin:0 auto;padding:20px 16px 40px}
+    h1{margin:10px 0 18px;text-align:center;letter-spacing:.5px}
+    .row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-bottom:14px}
+    button{
+      border:1px solid rgba(255,255,255,.14);
+      background:rgba(255,255,255,.06);
+      color:#fff;
+      padding:12px 18px;
+      border-radius:18px;
+      font-weight:700;
+      min-width:140px;
     }
-
-    #startBtn { background: #2563eb; color: #fff; }
-    #stopBtn { background: #7c2d12; color: #fff; }
-
-    textarea {
-      width: 90%;
-      height: 140px;
-      margin-top: 12px;
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      background: rgba(255,255,255,0.05);
-      color: #e5e7eb;
-      font-size: 15px;
+    button.primary{background:rgba(37,99,235,.75)}
+    button.danger{background:rgba(220,38,38,.55)}
+    button:disabled{opacity:.45}
+    .pill{
+      display:inline-flex;align-items:center;gap:8px;
+      padding:10px 14px;border-radius:999px;
+      background:rgba(255,255,255,.07);
+      border:1px solid rgba(255,255,255,.12);
+      font-weight:700;
     }
-
-    .status {
-      margin-top: 10px;
-      opacity: 0.8;
-      font-size: 14px;
+    .dot{width:10px;height:10px;border-radius:50%;background:#9ca3af}
+    .listening .dot{background:#22c55e; box-shadow:0 0 18px rgba(34,197,94,.55)}
+    .grid{display:grid;gap:12px;margin-top:12px}
+    @media(min-width:900px){ .grid{grid-template-columns:1fr 1fr} }
+    .card{
+      background:rgba(255,255,255,.06);
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:20px;
+      padding:14px;
+      box-shadow:0 14px 40px rgba(0,0,0,.25);
+    }
+    .label{font-weight:800;margin-bottom:10px;opacity:.95}
+    textarea{
+      width:100%;
+      min-height:160px;
+      resize:vertical;
+      border-radius:16px;
+      padding:14px;
+      border:1px solid rgba(255,255,255,.12);
+      background:rgba(0,0,0,.25);
+      color:#e5e7eb;
+      outline:none;
+      font-size:15px;
+      line-height:1.5;
+    }
+    .small{opacity:.8;font-size:13px;margin-top:8px}
+    .switch{
+      display:flex;align-items:center;gap:10px;
+      padding:10px 14px;border-radius:16px;
+      background:rgba(255,255,255,.06);
+      border:1px solid rgba(255,255,255,.12);
+      font-weight:800;
+    }
+    .status{
+      margin:10px auto 0;
+      max-width:960px;
+      padding:10px 14px;
+      border-radius:14px;
+      border:1px solid rgba(255,255,255,.12);
+      background:rgba(0,0,0,.22);
+      font-size:13px;
+      opacity:.9;
     }
   </style>
 </head>
+
 <body>
+  <div class="wrap" id="appRoot">
+    <h1>Silent Coach</h1>
 
-  <h1>Silent Coach</h1>
+    <div class="row">
+      <div class="pill" id="listenPill"><span class="dot"></span><span id="listenText">대기 중…</span></div>
 
-  <button id="startBtn">🎤 Start</button>
-  <button id="stopBtn">⛔ Stop</button>
+      <button class="primary" id="btnStart">🎤 Start</button>
+      <button class="danger" id="btnStop" disabled>⛔ Stop</button>
+      <button id="btnClear">🧹 Clear</button>
 
-  <div class="status" id="status">대기 중...</div>
+      <label class="switch">
+        <input type="checkbox" id="toggleAI" checked>
+        AI 코치 ON
+      </label>
 
-  <textarea id="interim" placeholder="실시간 전사 (interim)"></textarea>
-  <textarea id="final" placeholder="최종 전사 (final)"></textarea>
+      <button id="btnTest">🧪 코치 테스트</button>
+    </div>
+
+    <div class="status" id="statusLine">상태: 준비</div>
+
+    <div class="grid">
+      <div class="card">
+        <div class="label">🗣️ 실시간 전사 (interim)</div>
+        <textarea id="interimBox" placeholder="말하면 여기에 실시간으로 표시됩니다…" readonly></textarea>
+        <div class="small" id="micBadge">마이크: 준비</div>
+        <div class="small" id="srBadge">인식: 준비</div>
+      </div>
+
+      <div class="card">
+        <div class="label">🧠 코치 답변 (텍스트)</div>
+        <textarea id="coachBox" placeholder="AI 코치가 여기 답변합니다…" readonly></textarea>
+        <div class="small">tone: <span id="toneBadge"></span> / length: <span id="lenBadge"></span></div>
+      </div>
+
+      <div class="card" style="grid-column:1/-1">
+        <div class="label">✅ 최종 전사 (final 누적)</div>
+        <textarea id="finalBox" placeholder="확정된 문장이 여기에 누적됩니다…" readonly></textarea>
+      </div>
+    </div>
+  </div>
 
 <script>
-(() => {
-  const SpeechRecognition =
-    window.SpeechRecognition || window.webkitSpeechRecognition;
+/* PWA: 서비스워커 등록 */
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/sw.js").catch(()=>{});
+}
+
+const root = document.getElementById("appRoot");
+const listenText = document.getElementById("listenText");
+const btnStart = document.getElementById("btnStart");
+const btnStop  = document.getElementById("btnStop");
+const btnClear = document.getElementById("btnClear");
+const btnTest  = document.getElementById("btnTest");
+
+const toggleAI  = document.getElementById("toggleAI");
+const interimBox = document.getElementById("interimBox");
+const finalBox   = document.getElementById("finalBox");
+const coachBox   = document.getElementById("coachBox");
+
+const micBadge = document.getElementById("micBadge");
+const srBadge  = document.getElementById("srBadge");
+const statusLine = document.getElementById("statusLine");
+
+const toneBadge = document.getElementById("toneBadge");
+const lenBadge  = document.getElementById("lenBadge");
+
+let tone = localStorage.getItem("sc_tone") || "calm";
+let length = localStorage.getItem("sc_length") || "medium";
+toneBadge.textContent = tone;
+lenBadge.textContent = length;
+
+let running = false;
+let finalLines = [];
+const MAX_LINES = 12;
+
+let aiTimer = null;
+const AI_DEBOUNCE_MS = 700;
+
+let micStream = null;
+
+function setStatus(msg){
+  statusLine.textContent = "상태: " + msg;
+}
+
+function setListening(on){
+  if(on){
+    root.classList.add("listening");
+    listenText.textContent = "듣는 중…";
+    micBadge.textContent = "마이크: 사용중";
+    srBadge.textContent  = "인식: 진행중";
+    setStatus("음성 인식 중");
+  }else{
+    root.classList.remove("listening");
+    listenText.textContent = "대기 중…";
+    micBadge.textContent = "마이크: 준비";
+    srBadge.textContent  = "인식: 준비";
+    setStatus("대기");
+  }
+}
+
+function pushFinalLine(line){
+  if(!line) return;
+  finalLines.push(line);
+  if(finalLines.length > MAX_LINES) finalLines.shift();
+  finalBox.value = finalLines.join("\\n");
+}
+
+function clearAll(){
+  interimBox.value = "";
+  finalLines = [];
+  finalBox.value = "";
+  coachBox.value = "";
+  setStatus("초기화 완료");
+}
+
+const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+let recog = null;
+
+/* 모바일 안정화: continuous 끊김/재시작 대응 */
+function buildRecognizer(){
+  const r = new SpeechRecognition();
+  r.lang = "ko-KR";
+  r.interimResults = true;
+
+  // 모바일 Chrome은 continuous가 불안정할 수 있어 false 권장(필요시 true로 바꿔도 됨)
+  r.continuous = false;
+
+  r.onresult = (event) => {
+    let interim = "";
+    for (let i = event.resultIndex; i < event.results.length; i++) {
+      const res = event.results[i];
+      const txt = (res[0] && res[0].transcript) ? res[0].transcript : "";
+      if (res.isFinal) {
+        const cleaned = txt.trim();
+        if (cleaned) {
+          pushFinalLine(cleaned);
+          if (toggleAI.checked) scheduleCoach();
+        }
+      } else {
+        interim += txt;
+      }
+    }
+    interimBox.value = interim.trim();
+  };
+
+  r.onerror = (e) => {
+    srBadge.textContent = "인식: 오류";
+    setStatus("인식 오류: " + (e.error || "unknown"));
+  };
+
+  r.onend = () => {
+    // 모바일은 onend가 자주 발생 → running이면 재시작
+    if (running) {
+      try { r.start(); } catch {}
+    }
+  };
+
+  return r;
+}
+
+async function ensureMicOnce(){
+  try{
+    micStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+    micBadge.textContent = "마이크: 허용됨";
+  }catch(e){
+    micBadge.textContent = "마이크: 차단됨";
+    throw e;
+  }
+}
+
+async function start(){
+  if (running) return;
 
   if (!SpeechRecognition) {
-    alert("이 브라우저는 음성 인식을 지원하지 않습니다 (Chrome 사용 권장)");
+    alert("이 브라우저는 음성 인식을 지원하지 않습니다. (Chrome 권장)");
     return;
   }
 
-  let recognition = null;
-  let recognizing = false;
-
-  const startBtn = document.getElementById("startBtn");
-  const stopBtn  = document.getElementById("stopBtn");
-  const statusEl = document.getElementById("status");
-  const interimEl = document.getElementById("interim");
-  const finalEl = document.getElementById("final");
-
-  function createRecognition() {
-    recognition = new SpeechRecognition();
-    recognition.lang = "ko-KR";
-    recognition.continuous = true;
-    recognition.interimResults = true;
-
-    recognition.onstart = () => {
-      recognizing = true;
-      statusEl.textContent = "🎙️ 듣는 중...";
-    };
-
-    recognition.onend = () => {
-      recognizing = false;
-      statusEl.textContent = "⏸️ 중지됨";
-    };
-
-    recognition.onerror = (e) => {
-      console.error(e);
-      statusEl.textContent = "⚠️ 오류 발생";
-    };
-
-    recognition.onresult = (event) => {
-      let interim = "";
-      let finalText = "";
-
-      for (let i = event.resultIndex; i < event.results.length; i++) {
-        const txt = event.results[i][0].transcript;
-        if (event.results[i].isFinal) {
-          finalText += txt + " ";
-        } else {
-          interim += txt;
-        }
-      }
-
-      interimEl.value = interim;
-      if (finalText) {
-        finalEl.value += finalText;
-      }
-    };
+  try{
+    await ensureMicOnce();
+  }catch(e){
+    alert("마이크 권한이 필요합니다. 브라우저 설정에서 마이크 허용 후 다시 시도해주세요.");
+    return;
   }
 
-  // ⭐ 모바일 핵심 포인트
-  // 반드시 "버튼 클릭 이벤트 안에서" start() 실행
-  startBtn.addEventListener("click", () => {
-    if (recognizing) return;
+  running = true;
+  btnStart.disabled = true;
+  btnStop.disabled = false;
+  setListening(true);
 
-    createRecognition();     // 새 객체 생성
-    recognition.start();     // 즉시 실행 (비동기/타이머 ❌)
-  });
+  recog = buildRecognizer();
+  try { recog.start(); } catch {}
+}
 
-  stopBtn.addEventListener("click", () => {
-    if (recognition && recognizing) {
-      recognition.stop();
+function stop(){
+  running = false;
+  btnStart.disabled = false;
+  btnStop.disabled = true;
+  setListening(false);
+
+  try{ if(recog) recog.stop(); }catch{}
+
+  if(micStream){
+    micStream.getTracks().forEach(t => t.stop());
+    micStream = null;
+  }
+
+  interimBox.value = "";
+  setStatus("중지됨");
+}
+
+btnStart.addEventListener("click", start);
+btnStop.addEventListener("click", stop);
+btnClear.addEventListener("click", clearAll);
+
+/* AI 코치 호출 */
+function scheduleCoach(){
+  if(aiTimer) clearTimeout(aiTimer);
+  aiTimer = setTimeout(() => callCoach(), AI_DEBOUNCE_MS);
+}
+
+async function callCoach(){
+  const text = finalLines.join("\\n").trim();
+  if(!text) { setStatus("코치 호출 스킵(최종 전사 없음)"); return; }
+
+  // ✅ coachBox가 없으면 여기서 바로 알림(무반응 방지)
+  if(!coachBox){
+    alert("오류: coachBox 요소가 없습니다. index.html이 다른 버전일 수 있어요.");
+    return;
+  }
+
+  coachBox.value = "코칭 생성 중…";
+  setStatus("코치 요청 전송 중 (/api/coach)");
+
+  try{
+    const res = await fetch("/api/coach", {
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({ text, tone, length })
+    });
+
+    let data = null;
+    try{ data = await res.json(); }catch{}
+
+    if(!res.ok){
+      coachBox.value = "오류: 서버 응답 " + res.status;
+      setStatus("코치 실패: HTTP " + res.status);
+      return;
     }
-  });
-})();
-</script>
 
+    if(!data || !data.ok){
+      coachBox.value = "오류: " + (data?.error || "unknown");
+      setStatus("코치 실패: " + (data?.error || "unknown"));
+      return;
+    }
+
+    const c = data.coach;
+    coachBox.value =
+`[요약]
+- ${c.summary}
+
+[통찰]
+- ${c.insight || ""}
+
+[다음 행동 3개]
+- 1) ${c.actions?.[0] || ""}
+- 2) ${c.actions?.[1] || ""}
+- 3) ${c.actions?.[2] || ""}
+
+[한 줄]
+- ${c.one_liner || ""}`.trim();
+
+    setStatus("코치 응답 수신 완료 ✅");
+
+  }catch(e){
+    coachBox.value = "오류: 네트워크/서버 문제";
+    setStatus("코치 실패: 네트워크/서버 문제");
+  }
+}
+
+/* 수동 테스트 버튼: 말 안 해도 코치 호출이 되는지 확인 */
+btnTest.addEventListener("click", () => {
+  if(finalLines.length === 0){
+    finalLines = ["지금 상태 점검: 코치가 응답하는지 테스트합니다."];
+    finalBox.value = finalLines.join("\\n");
+  }
+  callCoach();
+});
+
+</script>
 </body>
 </html>
